# LittleSGR

./: .gitignore  CMakeLists.txt
src/: Application.cpp  Application.h  Base.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsPipeline.cpp  GraphicsPipeline.h  InputCode.h  Renderer.cpp  Renderer.h  Transformation.h  VertexShader.cpp  VertexShader.h  Window.cpp  Window.h  WindowsWindow.cpp  WindowsWindow.h  main.cpp
